--- a/TennisStoreServer/appsettings.json
+++ b/TennisStoreServer/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=(localdb)\\TennisStoreServer; Database=TennisStoreDB; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
