--- a/TennisStoreClient/TennisStoreClient.csproj
+++ b/TennisStoreClient/TennisStoreClient.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" PrivateAssets="all" />
+    <PackageReference Include="Syncfusion.Blazor.Navigations" Version="23.1.36" />
+    <PackageReference Include="Syncfusion.Blazor.Themes" Version="23.1.36" />
   </ItemGroup>
 
   <ItemGroup>
